open-shift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chronos-deployment
  labels:
    app: chronos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chronos
  template:
    metadata:
      labels:
        app: chronos
    spec:
      containers:
      - name: chronos
        image: kvas0/chronos:0.0.1
        ports:
        - containerPort: 8080
