open-shift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chronos-service
  labels:
    app: chronos
spec:
  selector:
    app: chronos
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
