open-shift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: chronos-route
  labels:
    app: chronos
spec:
  to:
    kind: Service
    name: chronos-service
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
